[tool.poetry]
name = "roslaunch-language-server"
version = "0.1.0"
description = ""
authors = ["Y.Hisaki <yhisaki31@gmail.com>"]
readme = "README.md"
packages = [
    { include = "roslaunch_analyzer", from = "src" },
    { include = "roslaunch_analyzer_v2", from = "src" },
    { include = "roslaunch_language_server", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
pygls = "^1.3.1"
typer = "^0.12.3"
pyyaml = "^6.0.1"
lark = "^1.1.9"
packaging = "^24.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
roslaunch-language-server = "roslaunch_language_server.cli:cli"

[tool.isort]
profile = "black"
